--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     - ./docker/nginx/conf.d/nginx.conf:/etc/nginx/conf.d/default.conf
   db:
     image: mysql:8.0
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_DATABASE: somplo
       MYSQL_ROOT_PASSWORD: password
